@@ -1,4 +1,4 @@
 DIST agrep-2.04.tar.Z 62351 RMD160 818f69f751943ddd8d6b2410b95bac1667985d0a SHA1 862fa60832b175b9b0c3f43d792f7663a43902b7 SHA256 31275a2fee28fb8966e1978d26fe8113b61ce49b39e68ddf4cad3964db72d5f8
-EBUILD agrep-2.04.ebuild 817 RMD160 4dd0daef0e81b3c362f0254d59cd3ce5b63ac388 SHA1 27bc4c8ba1ec5d296bb233ea3818656c44c6a070 SHA256 3d3ba2de2569b48f9ddd51d0793f35ff98a61b2fd9c302535379a4054a3c7cdb
-MISC ChangeLog 1874 RMD160 d52089f3540b2b312bae3012214f76efe32d8fc6 SHA1 f17cd8090ab0b76a225c52e4a497a8a6167bda5b SHA256 86fe400a31ef47a12a314fceda12db686ed28ac5d0517a5b9bf2c012d410ccbb
+EBUILD agrep-2.04.ebuild 857 RMD160 bc84fe903e538d4210342e74f280797d7f1a0c8b SHA1 2252a1b74783eafd69f98f0328c0e893ce3d829a SHA256 57950e1cb20104fd3306f550d28c5a5c023b6f30fd91781f1681a7d9bcbd3dcb
+MISC ChangeLog 1974 RMD160 6d8f496160b1049638dece87d3e6122e6284a187 SHA1 a1148a3f94b30788ecba778792c2d80db95ce821 SHA256 5f1feb79ff37d80f199b826d5c8ea779cbbf45b94ca2da85b01a06d6593c5b4c
 MISC metadata.xml 165 RMD160 c4557a3518a065b077539be5a0f20e4735fc2141 SHA1 1831705b1eb97b63968fc9eef31aa904a69a854a SHA256 75ca85c472d4181ae0de529c83826baaebe75d9e750ee6621758b5096bceffcd
