@@ -1,6 +1,8 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/agrep/agrep-2.04.ebuild,v 1.17 2007/02/09 22:15:07 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/agrep/agrep-2.04.ebuild,v 1.18 2009/04/13 02:29:06 darkside Exp $
+
+inherit toolchain-funcs
 
 DESCRIPTION="agrep is a tool for the fast searching of text allowing for errors in the search pattern."
 HOMEPAGE="ftp://ftp.cs.arizona.edu/agrep/README"
@@ -19,6 +21,7 @@ RDEPEND="!dev-libs/tre
 src_compile() {
 	# Remove first occurace of CFLAGS so we grab the user CFLAGS
 	sed -i -e 's/^CFLAGS.*//' Makefile
+	tc-export CC
 	emake || die
 }
 
